Move years back to X-axis with vertical bars

--- a/templates/index.html
+++ b/templates/index.html
@@ -1165,7 +1165,7 @@
                         ]
                     },
                     options: {
-                        indexAxis: 'y',
+                        indexAxis: 'x',
                         responsive: true,
                         maintainAspectRatio: true,
                         plugins: {
@@ -1185,7 +1185,7 @@
                             }
                     },
                     scales: {
-                        x: {
+                        y: {
                             beginAtZero: true,
                             max: 100,
                             ticks: {
@@ -1197,7 +1197,7 @@
                                 font: { weight: 'bold' }
                             }
                         },
-                        y: {
+                        x: {
                             title: {
                                 display: true,
                                 text: 'Year',
